--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "gatsby": "^3.3.0",
     "gatsby-image": "^3.3.0",
+    "gatsby-link": "^3.3.0",
     "gatsby-paginate": "^1.1.1",
     "gatsby-plugin-google-analytics": "^3.3.0",
     "gatsby-plugin-graphql-image": "^1.0.1",
